--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body{
 	/* set the font size to 1.1rem	*/
 	font-size: 1.1rem;
 	/* set the font color to #222 (--dk-gray) */
-	color: var(--dk-gray)
+	color: var(--dk-gray);
 	margin: 0;
 	padding: 0;
 }
@@ -94,7 +94,7 @@ nav a{
 	/* make the font's size 1.2rem */
 	font-size: 1.2rem;
 	/* make the font bolder (600) */
-	font: weight 600;
+	font-weight: 600;
 }
 
 nav a:hover{
